Fixed navbar collapse item for mobile view in frontend.

--- a/frontend/Assets/SCSS/_hero.scss
+++ b/frontend/Assets/SCSS/_hero.scss
@@ -36,5 +36,12 @@
     font-size: 1rem;
     height: 50px;
     padding-left: 25px;
+    width: 20%;
+    transition: all 0.3s linear;
+
+    &:focus {
+      width: 40%;
+      outline: none;
+    }
   }
 }
