--- a/frontend/Assets/SCSS/_nav.scss
+++ b/frontend/Assets/SCSS/_nav.scss
@@ -85,14 +85,15 @@
   width: 70%;
   justify-content: flex-end;
   align-items: center;
+  transition: all 0.3s linear;
 
   @include atSmall {
+    height: 0;
+    overflow: hidden;
+    width: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-
-    display: none;
   }
 
   .nav-item {
@@ -102,9 +103,8 @@
       text-decoration: none;
     }
   }
-
-  .show-navbar-nav {
-    display: flex;
-    transition: all 0.3s ease-in-out;
-  }
+}
+.show-navbar-nav {
+  height: 30vh;
+  display: flex;
 }
