--- a/frontend/Assets/styles/style.css
+++ b/frontend/Assets/styles/style.css
@@ -213,22 +213,25 @@ a {
   display: flex;
   width: 70%;
   justify-content: flex-end;
-  align-items: center; }
+  align-items: center;
+  transition: all 0.3s linear; }
   @media only screen and (max-width: 600px) {
     .navbar-nav {
+      height: 0;
+      overflow: hidden;
+      width: 100%;
       flex-direction: column;
       justify-content: center;
-      align-items: center;
-      width: 100%;
-      display: none; } }
+      align-items: center; } }
   .navbar-nav .nav-item {
     margin: 0.5rem; }
     .navbar-nav .nav-item a {
       font-family: museo_sans_rounded700;
       text-decoration: none; }
-  .navbar-nav .show-navbar-nav {
-    display: flex;
-    transition: all 0.3s ease-in-out; }
+
+.show-navbar-nav {
+  height: 30vh;
+  display: flex; }
 
 .container {
   display: flex;
@@ -288,7 +291,12 @@ a {
     border-bottom: 1px solid #e6e6e6;
     font-size: 1rem;
     height: 50px;
-    padding-left: 25px; }
+    padding-left: 25px;
+    width: 20%;
+    transition: all 0.3s linear; }
+    .search-bar-input:focus {
+      width: 40%;
+      outline: none; }
 
 .blog-featured {
   display: flex;
